[package]
name = "paralllel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
indicatif = "0.17.2"
concurrent-queue = "2.0.0"
signal-hook = "0.3.14"
